--- a/src/app/Components/add-edit-emp/add-edit-emp.component.html
+++ b/src/app/Components/add-edit-emp/add-edit-emp.component.html
@@ -17,7 +17,7 @@
                     id="name"
                     formControlName="name"
                     class="form-control"
-                    value="{{currentEmp.empName}}"
+                    [value]="currentEmp.empName"
                   />
                   <div *ngIf=" formValidate['name'].touched && formValidate['name'].errors" class="invalid-feedback">
                     <div class="alert alert-danger" *ngIf="formValidate['name'].errors['required']">Name is required</div>
@@ -30,7 +30,7 @@
                     id="email"
                     formControlName="email"
                     class="form-control"
-                    value="{{currentEmp.empEmail}}"
+                    [value]="currentEmp.empEmail"
                   />
                   <div *ngIf=" formValidate['email'].touched && formValidate['email'].errors" class="invalid-feedback">
                     <div class="alert alert-danger" *ngIf="formValidate['email'].errors['required']">Name is required</div>
@@ -45,7 +45,7 @@
                     id="address"
                     formControlName="address"
                     class="form-control"
-                    value="{{currentEmp.empAddress}}"
+                    [value]="currentEmp.empAddress"
                   />
                   <div *ngIf=" formValidate['address'].touched && formValidate['address'].errors" class="invalid-feedback">
                     <div class="alert alert-danger" *ngIf="formValidate['address'].errors['required']">Name is required</div>
@@ -58,7 +58,7 @@
                     id="phone"
                     formControlName="phone"
                     class="form-control"
-                    value="{{currentEmp.empPhone}}"
+                    [value]="currentEmp.empPhone"
                   />
                   <div *ngIf=" formValidate['phone'].touched && formValidate['phone'].errors" class="invalid-feedback">
                     <div class="alert alert-danger" *ngIf="formValidate['phone'].errors['required']">Phone is required</div>
