--- a/src/app/Components/grid/grid.component.html
+++ b/src/app/Components/grid/grid.component.html
@@ -2,9 +2,28 @@
     <thead>
         <tr>
           <th scope="col"></th>
-          <th scope="col">Name</th>
+          <th scope="col">Name
+            <span>
+                <svg (click)="sortAsending(1)" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                  </svg>
+                  <svg (click)="sortdesending(1)" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+                  </svg>
+            </span>
+
+          </th>
           <th scope="col">Email</th>
-          <th scope="col">Address</th>
+          <th scope="col">Address
+            <span>
+                <svg (click)="sortAsending(2)" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-up" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                  </svg>
+                  <svg (click)="sortdesending(2)" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+                  </svg>
+            </span>
+          </th>
           <th scope="col">Phone</th>
           <th scope="col">Actions</th>
         </tr>
@@ -26,6 +45,7 @@
                 </td>
                 <td>
                     <span>{{employee.empEmail}}</span>
+
                 </td>
                 <td>
                     <span>{{employee.empAddress}}</span>
