--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <app-header (openEditpoupParentFun)="openEditpoupParentFun($event)"></app-header>
 <div class="main">
   <div class="container mt-4">
-    <app-grid (toggleSpinner)="toggleSpinner($event)" (openEditpoupParentFun)="openEditpoupParentFun($event)"></app-grid>
+    <app-grid (toggleSpinner)="toggleSpinner($event)" (openEditpoupParentFun)="openEditpoupParentFun($event)" #GridComponent></app-grid>
 
   </div>
 </div>
 
-<app-add-edit-emp (toggleSpinner)="toggleSpinner($event)" #AddEditEmpComponent></app-add-edit-emp>
+<app-add-edit-emp (refreshGrid)="refreshGrid()" (toggleSpinner)="toggleSpinner($event)" #AddEditEmpComponent></app-add-edit-emp>
 <app-loading-spinner  *ngIf="showLoading"></app-loading-spinner>
